--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,11 @@ dash-iconify==0.1.2
 dash_mantine_components==0.15.2
 dash-table==5.0.0
 pandas==2.2.3
+geopandas==0.14.2
+branca==0.6.0
 plotly==5.24.1
+scikit-learn==1.6.1
+folium==0.14.0
+matplotlib==3.8.4
+seaborn==0.13.2
+gunicorn
